--- a/ShiftRpg/ShiftRpg.csproj
+++ b/ShiftRpg/ShiftRpg.csproj
@@ -392,6 +392,7 @@
     <Compile Include="Contracts\IGunInputDevice.cs" />
     <Compile Include="Contracts\IMeleeWeapon.cs" />
     <Compile Include="Contracts\IMeleeWeaponInputDevice.cs" />
+    <Compile Include="Contracts\IPersistentEffect.cs" />
     <Compile Include="Contracts\IProjectile.cs" />
     <Compile Include="Contracts\ITakesDamage.cs" />
     <Compile Include="Contracts\IWeapon.cs" />
@@ -419,6 +420,7 @@
     <Compile Include="DataTypes\TileMapInfo.Generated.cs" />
     <Compile Include="DataTypes\TopDownValues.Generated.cs" />
     <Compile Include="Effects\DamageEffect.cs" />
+    <Compile Include="Effects\DamageOverTimeEffect.cs" />
     <Compile Include="Effects\SourceTag.cs" />
     <Compile Include="Effects\KnockbackEffect.cs" />
     <Compile Include="Effects\StandardEffectHandlers.cs" />
